# bigdgcnn

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_bpi12_mp.py  run_exdpn_mp.py  run_exdpn_with_data_mp.py  run_helpdesk_mp.py  run_helpdesk_repaired_mp.py
CPNTools/: .gitignore  base-p2p.cpn  base-p2p_with_origins.cpn
Event Logs/eXdpn/: exdpn_with_customs.xes
Experiments/BPI12/LR_1e-3/: BPI12_1.pt  BPI12_10.pt  BPI12_2.pt  BPI12_3.pt  BPI12_4.pt  BPI12_5.pt  BPI12_6.pt  BPI12_7.pt  BPI12_8.pt  BPI12_9.pt  summary.txt  training_histories.csv
Experiments/BPI12/LR_1e-4/: BPI12_1.pt  BPI12_10.pt  BPI12_2.pt  BPI12_3.pt  BPI12_4.pt  BPI12_5.pt  BPI12_6.pt  BPI12_7.pt  BPI12_8.pt  BPI12_9.pt  summary.txt  training_histories.csv
Experiments/Helpdesk/: Helpdesk_1.pt  Helpdesk_10.pt  Helpdesk_2.pt  Helpdesk_3.pt  Helpdesk_4.pt  Helpdesk_5.pt  Helpdesk_6.pt  Helpdesk_7.pt  Helpdesk_8.pt  Helpdesk_9.pt  summary.txt  training_histories.csv
Experiments/Helpdesk Repaired/: Helpdesk_Repaired_1.pt  Helpdesk_Repaired_10.pt  Helpdesk_Repaired_2.pt  Helpdesk_Repaired_3.pt  Helpdesk_Repaired_4.pt  Helpdesk_Repaired_5.pt  Helpdesk_Repaired_6.pt  Helpdesk_Repaired_7.pt  Helpdesk_Repaired_8.pt  Helpdesk_Repaired_9.pt  summary.txt  training_histories.csv
bigdgcnn/: __init__.py
bigdgcnn/data_processing/: __init__.py  data_processing.py
bigdgcnn/datasets/: BIG_Instancegraph_Dataset.py  BIG_Instancegraph_Dataset_With_Attributes.py  HelpdeskDataset.py  __init__.py
bigdgcnn/ml/: model.py  model_pytorch.py
bigdgcnn/util/: __init__.py  util.py
(+26 files in other folders)
