[tool.poetry]
name = "bigdgcnn"
version = "0.1.0"
description = ""
authors = ["Cameron Pitsch <cameron.pitsch@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pm4py = "2.2.23"
networkx = "3.1"
torch-geometric = "^2.3.1"
torch = "^2.0.1"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
